# project-astra

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat
apps/discord_bot/: CMakeLists.txt  copy_dpp_dlls.cmake
apps/discord_bot/include/: commands_module.hpp  discord_bot.hpp  message_module.hpp  voice_module.hpp
apps/discord_bot/src/: commands_module.cpp  discord_bot.cpp  discord_main.cpp  message_module.cpp  voice_module.cpp
apps/orchestrator_brain/: CMakeLists.txt
apps/orchestrator_brain/include/: tool_interface.hpp  tool_registry.hpp
apps/orchestrator_brain/src/: brain_main.cpp
core/include/: config.hpp
orchestrator/: CMakeLists.txt
orchestrator/include/: commands_module.hpp  discord_bot.hpp  message_module.hpp  pipeline.hpp  tool_interface.hpp  tool_registry.hpp  voice_module.hpp
orchestrator/schemas/: tool_call.schema.json  utterance.schema.json
orchestrator/src/: commands_module.cpp  discord_bot.cpp  main.cpp  message_module.cpp  pipeline.cpp  tool_registry.cpp  voice_module.cpp
tools/: CMakeLists.txt  llm_llama.cpp  stt_whisper.cpp  tts_piper.cpp
